3.2.1 (unreleased)
------------------
LIMS-2477: Reference Analysis has no dependencies; remove guard that assumes it does
LIMS-2465: Not possible to translate Bika Listing Table Workflow Action Buttons
LIMS-1391: Add configurable identifier types (CAS# for AnalysisService)
LIMS-2466: Central Instrument Location Management
LIMS-2357: Custom Landing Page and Link to switch between the Front Page and Dashboard
LIMS-2341: Cleanup and format default Multi-AR COA
LIMS-2455: Contact/Login Linkage Behavior
LIMS-2456: Restrict duplicate slots in worksheet templates to routine analyses only.
LIMS-2447: getDatePublished index not indexed correctly at time of AR publication
LIMS-2404: AR list in batches permitted sampling without Sampler and Sampling date provided
LIMS-2380: ARs are created in correct order (order of columns in ar-create form)
LIMS-2394: Calculation failure in worksheets. TDS Calc misfires again.
LIMS-2391: Use source analysis's sample ID in duplicate analysis IDs
LIMS-2351: Field analyses without results do not prevent Samples from being received
LIMS-2366: Workflow. AR stays in Received state with all Analyses in To be Verifie
LIMS-2384: ARImport: Workflow state of imported ARs and their Analyses not synchronised.
LIMS-2369: Workflow. Sampler and Date Sampled should be compulsory
LIMS-2355: Unable to view dormant/active filters in some bika_setup pages
LIMS-2344: Fix some UI javascript failures when viewing ARs
LIMS-2319: AR Add: Deleting a selected CC Contact corrupts the UID of reference widgets
LIMS-2325: Allow SampleTypes to be linked with Client Sample Points
LIMS-2324: WS export to the LaChat Quick Chem FIA
LIMS-2298: Add filter in Clients list
LIMS-2299: Add ui for editing ar_count in all analysisrequest lists
LIMS-2268: Instrument Interface. Vista Pro Simultaneous ICP, bi-directional CSV
LIMS-2261: Cannot create analysis request
LIMS-1562: Using a Sample Round. Basic form and printed form